update test